# foolang

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LANG.md  LICENSE  Makefile  README.md  TODO.md  TODO.org  azure-pipelines.yml  beep.sh  bootstrap.sh  build-host.sh  build.rs  build.sh  build_utils.sh  debug.sh  find-clang.sh  find-tool.sh  format.sh  indent_lang.sh  loc.sh  mkdocs.yml  no_duplicate_declarations.sh  rustfmt.toml  syntax-postcard.foo  test-elisp.sh  test-runtime.sh  test_foo.sh  test_foo2.sh  tokenization_tests.json  tokenization_tests2.json  utils.sh
.github/: pull_request_template.md
c/: ext.h  foo.h  main.c  mark-and-sweep.c  mark-and-sweep.h  random.c  random.h  system.h  system_unix.c  system_windows.c  test_system.c
data/: 1001-character-line.txt  132-bytes.txt
design/: Array_Indexing.md  Arrays.md  Booleans.md  Enum.md  Enum.mp  Errors.md  Exceptions.md  Extension_Methods.md  Finalization.md  Functions.md  GCv1.md  IDE.md  Interfaces.md  Iterators.md  Modules.md  Reader.md  Reserved_Words.md  Supervisors.md  Syntax.md  Tokenization.md  Toy_Problem.md  Value_Types.md
doc/: glossary.adoc  hello-world.adoc  install.adoc  main.adoc  syntax.adoc  tutorial.adoc
docs/: Arrays.md  Booleans.md  CNAME  Comprehensions.md  Enum.md  Extension_Methods.md  Finalization.md  Functions.md  GCv1.md  IDE.md  IR.md  Interfaces.md  LANG.md  Miscellany.md  Modules.md  README.md  Self_Hosting.md  Supervisors.md  SyntaxNotes.md  Testing.md  Tokenization.md  _navbar.md  _sidebar.md  bibliography.md  design.md  index.html  index.md  iterators.md  parsing.md  reference.md  reflection.md  syntax.md  system.md  tutorial.md
elisp/: foolang.el  inferior-foolang.el  ob-foolang.el
ext/: dtoa.c  xxhash.h
foo/: abort.foo  array.foo  array_let.foo  array_let2.foo  bad_class.foo  benchmarks.foo  benchmarks2.foo  boolean.foo  compile.foo  dictionary.foo  eval.foo  exit_42.foo  exit_zero.foo  float.foo  flying.foo  flying2.foo  flying3.foo  flying_vis.foo  foo.foo  foolang.foo  format.foo  graphics1.foo  hello.foo  hello_x.foo  impl.foo  import_bar_y.foo  import_x.foo  import_x_Identity.foo  import_x_local.foo  import_x_star.foo  integer.foo  interface_bad_signature.foo  interface_inheritance.foo  interface_ok.foo  output.foo  playground.foo  prelude.foo  print_flush.foo  print_no_flush.foo  repl.foo  (+9 more)
host/: foo.h  main.c  system.h  system_unix.c  system_windows.c
ide/: foo.css  foo.js  index.html
runtime-test/: natural-pi.c
(+418 files in other folders)
