[package]
name = "foolang"
version = "0.0.0"
authors = ["Nikodemus Siivola <nikodemus@random-state.net>"]
license = "MIT"
description = "Foolang is a Smalltalk-inspired toy language."
homepage = "https://foolang.org"
documentation = "https://foolang.org"
repository = "https://github.com/nikodemus/foolang"
keywords = ["foolang", "language"]
edition = "2018"
default-run = "foo"
exclude = ["papers/*"]

[[bin]]
name = "foo"
path = "src/main.rs"

[dependencies]
regex = "1"
lazy_static = "*"
clap = "*"
rouille = "*"
webbrowser = "*"
kiss3d = "*"
nalgebra = "*"
getrandom = "*"
rand = "0.7.3"

[target.'cfg(unix)'.dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
winapi = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
serde_json = "*"
pretty_assertions = "0.6.1"
