[package]
name = "foolang"
version = "0.1.0"
authors = ["Nikodemus Siivola <nikodemus@random-state.net>"]
license = "MIT"
description = "Foolang is a Smalltalk-inspired toy language."
homepage = "https://foolang.org"
repository = "https://github.com/nikodemus/foolang"
keywords = ["foolang", "language"]
edition = "2018"
default-run = "foo"
exclude = ["docs/papers/*"]

[[bin]]
name = "foo"
path = "src/main.rs"

[dependencies]
regex = "1.*.*"
lazy_static = "1.*.*"
clap = "2.*.*"
rouille = "3.*.*"
webbrowser = "0.5.*"
kiss3d = "0.22.*"
nalgebra = "0.19.*"
getrandom = "0.1.*"
rand = "0.7.*"

[target.'cfg(unix)'.dependencies]
libc = "0.2.*"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.*"

[dev-dependencies]
assert_cmd = "0.12.*"
predicates = "1.*.*"
serde_json = "1.*.*"
pretty_assertions = "0.6.*"
