[package]
name = "foolang"
version = "0.1.0"
authors = ["Nikodemus Siivola <nikodemus@random-state.net>"]
license = "MIT"
description = "Foolang is a Smalltalk-inspired toy language."
homepage = "https://foolang.org"
repository = "https://github.com/nikodemus/foolang"
keywords = ["foolang", "language"]
edition = "2018"
default-run = "bootstrap-interpreter"
exclude = ["docs/papers/*"]

[[bin]]
name = "bootstrap-interpreter"
path = "src/main.rs"

[profile.dev]
opt-level = 2

[dependencies]
clap = "2.*.*"
getrandom = "0.1.*"
rand = "0.7.*"

[target.'cfg(unix)'.dependencies]
libc = "0.2.*"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.*"

[dev-dependencies]
assert_cmd = "1.0.*"
predicates = "1.*.*"
serde_json = "1.*.*"
pretty_assertions = "0.6.*"
